fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,4 @@ button:focus-visible {
   button {
     background-color: #2c2c2c;
   }
-  div.count {
-    background-color: #2c2c2c;
-  }
 }
